Fixed spacing between features

--- a/src/fragments/Features/style.css
+++ b/src/fragments/Features/style.css
@@ -126,7 +126,7 @@
   .featureList{
     li{
       width: 100%;
-      padding: 15px;
+      padding: 30px 15px;
 
       h3:before {
         content: '';
